# cava

./: .clang-format  .codespellrc  .config.c.swp  .config.h.swp  .gitignore  CAVACORE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  FORMATTING.md  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  README_BACKUP_5170.md  README_LOCAL_5170.md  README_REMOTE_5170.md  SHADERS.md  TERMINAL.md  aclocal.m4  autogen.sh  autoreconf.sh  build-custom-docker-image-for-cava.sh  cava.c  cava.psf  cavacore.c  cavacore.h  cavacore_test.c  cavalib.c  cavalib.h  cavalib_test.c  changelog  clock.c  clock.h  common.h  config.c  config.h  config.status  (+10 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  build-and-test.yml  build-mac.yml  build.yml
autom4te.cache/: output.1  requests  traces.0  traces.1
cava_win/: INSTALL.txt  README.md  cava.rc  cava.wxs  cava_win.sln  license.rtf  postsetupinfo.txt  setup.iss  vcpkg.json
cava_win/cava/: cava.rc  cava.vcxproj  packages.config
cavandroid/: README.md  build.gradle.kts  keystore.jks  settings.gradle.kts
cavandroid/app/: build.gradle.kts
cavandroid/app/src/androidTest/java/com/example/cava/: CavaCoreTest.kt
cavandroid/app/src/main/: AndroidManifest.xml
cavandroid/app/src/main/java/com/karlstav/cava/: MainActivity.kt
cavandroid/app/src/main/res/drawable/: baseline_bar_chart_24.xml  baseline_graphic_eq_24.xml  blue.xml  green.xml  red.xml
cavandroid/app/src/main/res/menu/: menu.xml
cavandroid/app/src/main/res/raw/: bar_spectrum.frag  pass_through.vert  seven_segment.frag
cavandroid/app/src/main/res/values/: array.xml  colors.xml  strings.xml  styles.xml
cavandroid/app/src/main/res/xml/: preferences.xml
cavandroid/gradle/wrapper/: gradle-wrapper.properties
example_files/: config  config.orig
example_files/desktop/: cava.desktop
example_files/etc/: asound.conf  asound_dmix.conf
example_files/etc/modprobe.d/: alsa-aloop.conf
example_files/nsis-win/: README.txt  cava.nsi  config
example_files/test_configs/: alsa_zero_test  fifo_zero_test  non_zero_test  pipewire_zero_test  portaudio_zero_test  pulse_zero_test  shmem_zero_test  sndio_zero_test
include/: cavacore.h  common.h  config.h  debug.h  util.h
include/cava/: cavacore.h  common.h  config.h  util.h
include/cava/input/: common.h  jack.h  oss.h  pipewire.h  pulse.h  sndio.h
include/cava/output/: common.h  noritake.h  sdl_cava.h  sdl_glsl.h  terminal_bcircle.h  terminal_ncurses.h  terminal_noncurses.h
include/input/: common.h  pulse.h
include/output/: common.h  noritake.h  sdl_cava.h  sdl_glsl.h  terminal_noncurses.h
iniparser/: Makefile  Makefile.am  README.md
iniparser/src/: dictionary.c  dictionary.h  iniparser.c  iniparser.h
input/: alsa.c  alsa.h  common.c  common.h  coreaudio.c  coreaudio.h  coreaudio_tap.h  coreaudio_tap.m  fifo.c  fifo.h  jack.c  jack.h  oss.c  oss.h  pipewire.c  pipewire.h  portaudio.c  portaudio.h  pulse.c  pulse.h  shmem.c  shmem.h  sndio.c  sndio.h  winscap.c  winscap.cpp  winscap.h
output/: common.c  common.h  graphical.c  graphical.h  graphical_sdl.c  graphical_sdl.h  graphical_win.c  graphical_win.h  graphical_x.c  graphical_x.h  noritake.c  noritake.h  raw.c  raw.h  sdl_cava.c  sdl_cava.h  sdl_glsl.c  sdl_glsl.h  terminal_bcircle.c  terminal_bcircle.h  terminal_ncurses.c  terminal_ncurses.h  terminal_noncurses.c  terminal_noncurses.h  terminal_printf.c  terminal_printf.h
output/shaders/: bar_spectrum.frag  energy_blob.frag  entropy_driven_collapse.frag  eye_of_phi.frag  field_radial.frag  harmonic_lock.frag  kaleido_tunnel.frag  lissajous_ribbon.frag  normalized_bars.frag  orion_circle.frag  orion_circle_rotate.frag  orion_saturn.frag  orion_saturn_core.frag  orion_saturn_subring.frag  orion_spiral.frag  pass_through.vert  phase_coherence_constellation.frag  phase_locked_harmonic_field.frag  polar_fft.frag  polar_smear.frag  spectral_interference.frag  spectral_mass.frag  spectral_memory_imprint.frag  spectrogram.frag  temporal_bloom.frag  topological_ring_collapse.frag  void_ring.frag  winamp_line_style_spectrum.frag
scripts/: clang-format-lint.sh  clang-format.sh
src/: cava.c  cavacore.c  common.c  config.c
src/input/: alsa.c  common.c  fifo.c  jack.c  oss.c  pipewire.c  portaudio.c  pulse.c  shmem.c  sndio.c  winscap.c
src/output/: common.c  noritake.c  raw.c  sdl_cava.c  sdl_glsl.c  terminal_bcircle.c  terminal_ncurses.c  terminal_noncurses.c
src/output/shaders/: eye_of_phi.frag  northern_lights.frag  pass_through.vert  spectrogram.frag  winamp_line_style_spectrum.frag
src/output/themes/: solarized_dark  tricolor
